se incluye html con click para validaciones js

--- a/registro.html
+++ b/registro.html
@@ -17,9 +17,9 @@
             </a>
             <input type="text" id="in_usuario" placeholder="Usuario">
             <input type="password" id="in_contraseña" placeholder="Contraseña">
-            <button id="btn_enviar_registro"> Enviar </button>
+            <button id="btn_enviar_registro" onclick="validar_nombreUsuario(), validar_contrasena()"> Enviar </button>
         </form>
     </div>
-    
+    <script src="js/validaciones.js"></script>
 </body>
 </html>
